...
                },
        ) {
            Text(text = "Session actions")
        }
        DropdownMenu(expanded = expanded, onDismissRequest = { expanded = false }) {
            DropdownMenuItem(
                text = { Text(if (session.pinned) "Unpin Session" else "Pin Session") },
                onClick = {
                    expanded = false
                    onEvent(
                        if (session.pinned) {
                            EntryUiEvent.UnpinSessionClicked(session.id)
                        } else {
...
